[tool.poetry]
name = "running-tools"
version = "0.0.1"
description = "A set of helpful tools for runners"
authors = ["Ben Davidson <benjamin@idavidson.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tukanuk/running-tools"
keywords = ["running", "pace"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^7.1.3"
mypy = "^0.981"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
